[gd_scene load_steps=5 format=3 uid="uid://dr3s4vm5jqtjw"]

[ext_resource type="Script" path="res://source/gui/menus/title_screen.gd" id="1_781v2"]
[ext_resource type="Texture2D" uid="uid://blq02gpceiad6" path="res://assets/starry_sky.png" id="2_ckn7u"]
[ext_resource type="Texture2D" uid="uid://d07wegct2qre3" path="res://assets/rest_both.png" id="2_dmukj"]

[sub_resource type="LabelSettings" id="LabelSettings_otf0t"]
font_size = 72
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.388235)
shadow_offset = Vector2(3, 3)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_781v2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(640, 360)
rotation = 3.14159
scale = Vector2(0.677778, 0.677778)
texture = ExtResource("2_ckn7u")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "v1.0.0"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 229.0
offset_right = -207.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Gloom's Starry Night"
label_settings = SubResource("LabelSettings_otf0t")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MenuActions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="New Game" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MenuActions"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "New Game"

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MenuActions"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "Continue"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MenuActions"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "Credits"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MenuActions"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 44
disabled = true
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MenuActions"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "Quit"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "                                            "

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="B&G" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
self_modulate = Color(0.637843, 0.637843, 0.637843, 1)
layout_mode = 2
texture = ExtResource("2_dmukj")

[node name="BlackScreen" type="ColorRect" parent="."]
visible = false
z_index = 4096
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MenuActions/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MenuActions/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MenuActions/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MenuActions/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MenuActions/Quit" to="." method="_on_quit_pressed"]
